# rust-ocpp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  rust-toolchain.toml
src/v2_0_1/: Cargo.toml  mod.rs
src/v2_0_1/authorization/: mod.rs
src/v2_0_1/core/: mod.rs
src/v2_0_1/core/datatypes/: ac_charging_parameters_type.rs  additional_info_type.rs  apn_type.rs  authorization_data.rs  certificate_hash_data_chain_type.rs  certificate_hash_data_type.rs  charging_limit_type.rs  charging_needs_type.rs  charging_profile_criterion_type.rs  charging_profile_type.rs  charging_schedule_period_type.rs  charging_schedule_type.rs  charging_station_type.rs  clear_charging_profile_type.rs  clear_monitoring_result_type.rs  component_type.rs  component_variable_type.rs  composite_schedule_type.rs  consumption_cost_type.rs  cost_type.rs  dc_charging_parameters_type.rs  event_data_type.rs  evse_type.rs  firmware_type.rs  get_variable_data_type.rs  get_variable_result_type.rs  id_token_info_type.rs  id_token_type.rs  log_parameters_type.rs  message_content_type.rs  message_info_type.rs  meter_value_type.rs  modem_type.rs  monitoring_data_type.rs  ocsp_request_data_type.rs  (+19 more)
src/v2_0_1/datatypes/: ac_charging_parameters_type.rs  additional_info_type.rs  apn_type.rs  authorization_data.rs  certificate_hash_data_chain_type.rs  certificate_hash_data_type.rs  charging_limit_type.rs  charging_needs_type.rs  charging_profile_criterion_type.rs  charging_profile_type.rs  charging_schedule_period_type.rs  charging_schedule_type.rs  charging_station_type.rs  clear_charging_profile_type.rs  clear_monitoring_result_type.rs  component_type.rs  component_variable_type.rs  composite_schedule_type.rs  consumption_cost_type.rs  cost_type.rs  dc_charging_parameters_type.rs  event_data_type.rs  evse_type.rs  firmware_type.rs  get_variable_data_type.rs  get_variable_result_type.rs  id_token_info_type.rs  id_token_type.rs  log_parameters_type.rs  message_content_type.rs  message_info_type.rs  meter_value_type.rs  mod.rs  modem_type.rs  monitoring_data_type.rs  network_connection_profile_type.rs  ocsp_request_data_type.rs  prelude.rs  relative_time_interval_type.rs  report_data_type.rs  (+16 more)
src/v2_0_1/enumerations/: apn_authentication_enum_type.rs  attribute_enum_type.rs  authorization_status_enum_type.rs  authorize_certificate_status_enum_type.rs  boot_reason_enum_type.rs  cancel_reservation_status_enum_type.rs  certificate_action_enum_type.rs  certificate_signed_status_enum_type.rs  certificate_signing_use_enum_type.rs  change_availability_status_enum_type.rs  charging_limit_source_enum_type.rs  charging_profile_kind_enum_type.rs  charging_profile_purpose_enum_type.rs  charging_profile_status_enum_type.rs  charging_rate_unit_enum_type.rs  charging_state_enum_type.rs  clear_cache_status_enum_type.rs  clear_charging_profile_status_enum_type.rs  clear_message_status_enum_type.rs  clear_monitoring_status_enum_type.rs  component_criterion_enum_type.rs  connector_enum_type.rs  connector_status_enum_type.rs  cost_kind_enum_type.rs  customer_information_status_enum_type.rs  data_enum_type.rs  data_transfer_status_enum_type.rs  display_message_status_enum_type.rs  energy_transfer_mode_enum_type.rs  event_notification_enum_type.rs  event_trigger_enum_type.rs  firmware_status_enum_type.rs  generic_device_model_status_enum_type.rs  generic_status_enum_type.rs  get_charging_profile_status_enum_type.rs  get_display_messages_status_enum_type.rs  get_installed_certificate_status_enum_type.rs  hash_algorithm_enum_type.rs  id_token_enum_type.rs  install_certificate_status_enum_type.rs  (+38 more)
src/v2_0_1/helpers/: datetime_rfc3339.rs  mod.rs  serializer.rs  validator.rs
src/v2_0_1/messages/: authorize.rs  boot_notification.rs  cancel_reservation.rs  certificate_signed.rs  change_availability.rs  clear_cache.rs  clear_charging_profile.rs  clear_display_message.rs  clear_variable_monitoring.rs  cleared_charging_limit.rs  cost_updated.rs  customer_information.rs  datatransfer.rs  delete_certificate.rs  firmware_status_notification.rs  get_15118ev_certificate.rs  get_base_report.rs  get_certificate_status.rs  get_charging_profile.rs  get_charging_profiles.rs  get_composite_schedule.rs  get_display_message.rs  get_installed_certificate_ids.rs  get_local_list_version.rs  get_log.rs  get_monitoring_report.rs  get_report.rs  get_transaction_status.rs  get_variables.rs  heartbeat.rs  install_certificate.rs  log_status_notification.rs  meter_values.rs  mod.rs  notify_charging_limit.rs  notify_customer_information.rs  notify_display_messages.rs  notify_ev_charging_needs.rs  notify_ev_charging_schedule.rs  notify_event.rs  (+27 more)
src/v2_0_1/provisioning/: README.md  mod.rs  ocpp_ws.rs  service_tests.rs  tests.rs  unit_tests.rs
src/v2_0_1/rpc/: README.md  call.rs  call_result.rs  enums.rs  errors.rs  mod.rs  unit_test.rs
src/v2_0_1/security/: README.md  mod.rs
src/v2_0_1/src/: README.md  lib.rs
src/v2_0_1/tests/: mod.rs  schema_validation.rs
ws/: Cargo.toml  Dockerfile  README.md
ws/certs/: README.md  server.cert  server.key
ws/src/: main.rs  mod.rs
ws/src/handlers/: call.rs  connection.rs  error.rs  message.rs  mod.rs  response.rs
ws/src/rpc/: .unit_test.rs.rustfmt  README.md  call.rs  call_error.rs  call_result.rs  calls.rs  enums.rs  errors.rs  messages.rs  mod.rs  ocpp.rs  ocpp_error.rs  ocpp_message.rs  payload.rs  request.rs  unit_test.rs
ws/src/tests/: mod.rs  unit_test.rs
ws/src/validators/: validate.rs
(+886 files in other folders)
