[package]
name = "rust-ocpp"
description = "ocpp 1.6 and 2.0.1 libraries"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.3.2"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se"]
homepage = "https://codelabs.se/"
repository = "https://github.com/codelabsab/rust-ocpp"
edition = "2021"
keywords = ["ocpp", "ev", "csms"]
categories = ["accessibility", "data-structures", "embedded", "encoding", "web-programming::websocket"]
publish = true
exclude = ["docs/", "src/tests"]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std", "v2_0_1"]
v1_6 = []
v2_0_1 = []
std = ["dep:validator", "serde/std", "regex", "chrono/clock"]
no_std = ["dep:heapless"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"], optional = true }
heapless = { version = "0", features = ["serde"], optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
mockall = "0.11.3"
jsonschema = "0.16"
serde_json = { version = "1" }
pretty_env_logger = "0.4.0"
