[package]
name = "rust-ocpp"
description = "ocpp 1.6 and 2.0.1 libraries"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "1.0.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se"]
homepage = "https://codelabs.se/"
repository = "https://github.com/codelabsab/rust-ocpp"
edition = "2021"
keywords = ["ocpp", "ev", "csms"]
categories = ["accessibility", "data-structures", "embedded", "encoding", "web-programming::websocket"]
publish = true
exclude = ["docs/", "src/tests"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["v2_0_1"]
v1_6 = []
v2_0_1 = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
validator = { version = "0.18.1", default-features = false, features = ["derive"] }
regex = "1.10.5"

[dev-dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
serde_json = "1"
mockall = "0.13.0"
jsonschema = "0.18"
