[package]
name = "rust-ocpp"
description = "ocpp 1.6, 2.0.1 and 2.1 libraries"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "3.0.1"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se"]
homepage = "https://codelabs.se/"
repository = "https://github.com/codelabsab/rust-ocpp"
edition = "2021"
keywords = ["ocpp", "ev", "csms"]
categories = [
    "accessibility",
    "data-structures",
    "embedded",
    "encoding",
    "web-programming::websocket",
]
publish = true
exclude = ["docs/", "src/tests"]

[package.metadata.docs.rs]
all-features = true

[features]
# No default feature, so each version must be explicitly enabled
v1_6 = []
v2_0_1 = []
v2_1 = []
v2_ = ["v2_0_1", "v2_1"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = [
    "now",
    "serde",
    "alloc",
] }
uuid = { version = "1", default-features = false, features = ["v4"] }
validator = { version = "0.20.0", default-features = false, features = [
    "derive",
] }
regex = "1.11.1"
rust_decimal = { version = "1.36.0", features = [
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.36.0"
serde_json = "1"
lazy_static = "1.4"
jsonschema = "0.30.0"

[dev-dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
mockall = "0.13.1"
jsonschema = "0.30.0"
