[package]
name = "ws"
version = "0.1.0"
authors = ["Tommy Malmqvist <tommy.malmqvist@codelabs.se"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8"
async-trait = "0.1.42"
strum = "0.24.0"
strum_macros = "0.24.0"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4.0"
warp = { version = "0.3", features = ["tls"] }
rust-ocpp = { path = "../ocpp" }

[dev-dependencies]
mockall = "0.11.0"

[[bin]]
name = "ws"
test = false
bench = false
path = "src/main.rs"

