[package]
name = "rust_ocpp_v2_0_1"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.22", default-features = false, features = ["serde", "clock"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
pretty_env_logger = "0.4.0"
log = "0.4"
validator = { version = "0.16.0", features = ["derive"] }
regex = "1"

[dev-dependencies]
mockall = "0.11.3"
jsonschema = "0.17.0"
